--- a/using/configure.po
+++ b/using/configure.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-26 09:46-0300\n"
+"PO-Revision-Date: 2021-10-26 23:19-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -434,16 +434,23 @@ msgid ""
 "the ``NDEBUG`` macro (see also the :option:`--with-assertions` configure "
 "option). Main runtime checks:"
 msgstr ""
+"Agrega verificaciones de tiempo de ejecución: código rodeado por ```#ifdef "
+"Py_DEBUG`` y `#endif``. Habilite las aserciones ``assert(...)`` y "
+"``_PyObject_ASSERT(...)``: no configure la macro ``NDEBUG`` (consultar "
+"también la opción de configuración :option:`--with-assertions`). "
+"Comprobaciones principales de tiempo de ejecución:"
 
 #: ../Doc/using/configure.rst:235
 msgid "Add sanity checks on the function arguments."
-msgstr ""
+msgstr "Agregue controles de sanidad en los argumentos de la función."
 
 #: ../Doc/using/configure.rst:236
 msgid ""
 "Unicode and int objects are created with their memory filled with a pattern "
 "to detect usage of uninitialized objects."
 msgstr ""
+"Los objetos unicode e int se crean con su memoria completa con un patrón "
+"para detectar el uso de objetos no inicializados."
 
 #: ../Doc/using/configure.rst:238
 msgid ""
@@ -479,7 +486,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:256
 msgid "Debug options"
-msgstr ""
+msgstr "Opciones de depuración"
 
 #: ../Doc/using/configure.rst:260
 msgid ""
@@ -493,15 +500,15 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:267
 msgid "Effects:"
-msgstr ""
+msgstr "Efectos:"
 
 #: ../Doc/using/configure.rst:269
 msgid "Define the ``Py_TRACE_REFS`` macro."
-msgstr ""
+msgstr "Define la macro ``Py_TRACE_REFS``."
 
 #: ../Doc/using/configure.rst:270
 msgid "Add :func:`sys.getobjects` function."
-msgstr ""
+msgstr "Agrega la función :func:`sys.getobjects`."
 
 #: ../Doc/using/configure.rst:271
 msgid "Add :envvar:`PYTHONDUMPREFS` environment variable."
@@ -534,10 +541,11 @@ msgstr ""
 #: ../Doc/using/configure.rst:293
 msgid "Enable Valgrind support (default is no)."
 msgstr ""
+"Habilite la compatibilidad con Valgrind (el valor predeterminado es no)."
 
 #: ../Doc/using/configure.rst:297
 msgid "Enable DTrace support (default is no)."
-msgstr ""
+msgstr "Habilite la compatibilidad con DTrace (el valor predeterminado es no)."
 
 #: ../Doc/using/configure.rst:299
 msgid ""
@@ -576,11 +584,11 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:340
 msgid "Libraries options"
-msgstr ""
+msgstr "Opciones de bibliotecas"
 
 #: ../Doc/using/configure.rst:344
 msgid "Link against additional libraries (default is no)."
-msgstr ""
+msgstr "Enlace con bibliotecas adicionales (el valor predeterminado es no)."
 
 #: ../Doc/using/configure.rst:348
 msgid ""
@@ -606,23 +614,23 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:367
 msgid "Define the ``WITH_EDITLINE`` macro."
-msgstr ""
+msgstr "Define la macro ``WITH_EDITLINE``."
 
 #: ../Doc/using/configure.rst:373
 msgid "Don't build the :mod:`readline` module (built by default)."
-msgstr ""
+msgstr "No cree el módulo :mod:`readline` (es construido por defecto)."
 
 #: ../Doc/using/configure.rst:375
 msgid "Don't define the ``HAVE_LIBREADLINE`` macro."
-msgstr ""
+msgstr "No defina la macro ``HAVE_LIBREADLINE``."
 
 #: ../Doc/using/configure.rst:381
 msgid "Override search for Tcl and Tk include files."
-msgstr ""
+msgstr "Sobreescribe la búsqueda de archivos incluidos de Tcl y Tk."
 
 #: ../Doc/using/configure.rst:385
 msgid "Override search for Tcl and Tk libraries."
-msgstr ""
+msgstr "Sobreescribe la búsqueda de bibliotecas Tcl y Tk."
 
 #: ../Doc/using/configure.rst:389
 msgid ""
@@ -1001,11 +1009,11 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:623
 msgid "C compiler command."
-msgstr ""
+msgstr "Comando del compilador C."
 
 #: ../Doc/using/configure.rst:625
 msgid "Example: ``gcc -pthread``."
-msgstr ""
+msgstr "Ejemplo: ``gcc -pthread``."
 
 #: ../Doc/using/configure.rst:629
 msgid ""
@@ -1024,7 +1032,7 @@ msgstr "Por defecto: ``$(CC)``."
 
 #: ../Doc/using/configure.rst:639
 msgid "C++ compiler command."
-msgstr ""
+msgstr "Comando del compilador de C++."
 
 #: ../Doc/using/configure.rst:641
 msgid "Used if the :option:`--with-cxx-main` option is used."
@@ -1032,11 +1040,11 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:643
 msgid "Example: ``g++ -pthread``."
-msgstr ""
+msgstr "Ejemplo: ``g++ -pthread``."
 
 #: ../Doc/using/configure.rst:647
 msgid "C compiler flags."
-msgstr ""
+msgstr "Banderas del compilador de C."
 
 #: ../Doc/using/configure.rst:651
 msgid ""
@@ -1078,7 +1086,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:693
 msgid "For example, ``-fPIC`` is used on Linux and on BSD."
-msgstr ""
+msgstr "Por ejemplo, ``-fPIC`` se usa en Linux y BSD."
 
 #: ../Doc/using/configure.rst:697
 msgid "Extra C flags added for building the interpreter object files."
@@ -1132,7 +1140,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:739
 msgid "Default: empty string (not used)."
-msgstr ""
+msgstr "Por defecto: cadena de caracteres vacía (no utilizado)."
 
 #: ../Doc/using/configure.rst:743
 msgid "Linker flags"
@@ -1194,7 +1202,7 @@ msgstr ""
 
 #: ../Doc/using/configure.rst:794
 msgid "Default: ``@LDSHARED@ $(PY_LDFLAGS)``."
-msgstr ""
+msgstr "Por defecto: ``@LDSHARED@ $(PY_LDFLAGS)``."
 
 #: ../Doc/using/configure.rst:798
 msgid "Command to build ``libpython`` shared library."
