Traducido archivo extending/extending

--- a/extending/extending.po
+++ b/extending/extending.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-06-26 16:26+0200\n"
+"PO-Revision-Date: 2021-10-27 04:00-0400\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/extending/extending.rst:8
 msgid "Extending Python with C or C++"
@@ -1285,6 +1286,10 @@ msgid ""
 "collect` function), as well as configuration interfaces and the ability to "
 "disable the detector at runtime."
 msgstr ""
+"El detector de ciclos es capaz de detectar ciclos basura y puede "
+"recuperarlos. El módulo :mod:`gc` expone una forma de ejecutar el detector "
+"(la función :func:`~gc.collect`), así como interfaces de configuración y la "
+"posibilidad de desactivar el detector en tiempo de ejecución."
 
 #: ../Doc/extending/extending.rst:920
 msgid "Reference Counting in Python"
