--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-10-26 18:08+0200\n"
+"PO-Revision-Date: 2021-10-27 11:05+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -93,8 +93,8 @@ msgid ""
 "sequences, and for mathematical operations like unions, intersections, "
 "differences, and symmetric differences. ::"
 msgstr ""
-"Python 2.3 introdujo el módulo ´set´, implementaciones del lenguaje C de "
-"tipos de datos han sido agregados al core de Python como dos nuevos tipos "
+"Python 2.3 introdujo el módulo :mod: ´set´, implementaciones del lenguaje C "
+"de tipos de datos han sido agregados al core de Python como dos nuevos tipos "
 "integrados. ``set (iterable)`` y ``frozenset (iterable)`` . Ellos proveen "
 "operaciones de alto rendimiento para pruebas de pertenencia, eliminar datos "
 "duplicados de una secuencia y operaciones matemáticas como: uniones, "
@@ -106,9 +106,9 @@ msgid ""
 "is immutable and hashable, it may be used as a dictionary key or as a member "
 "of another set."
 msgstr ""
-"La función de conjuntos integrados frozenset() es una versión inmutable de "
-"set(). Como es inmutable y hashable (su valor no cambia), se puede usar como "
-"una llave de diccionario o como parte de otro set."
+"La función de conjuntos integrados :func: frozenset() es una versión "
+"inmutable de set(). Como es inmutable y hashable (su valor no cambia), se "
+"puede usar como una llave de diccionario o como parte de otro set."
 
 #: ../Doc/whatsnew/2.4.rst:75
 msgid ""
@@ -134,7 +134,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:90
 msgid "PEP 237: Unifying Long Integers and Integers"
-msgstr "PEP 237, Unificando enteros largos y enteros"
+msgstr "PEP 237: Unificando enteros largos y enteros"
 
 #: ../Doc/whatsnew/2.4.rst:92
 msgid ""
@@ -148,10 +148,10 @@ msgstr ""
 "El prolongado proceso de transición para este PEP que comenzó en Python 2.2 "
 "ha dado un paso más adelante en Python 2.4. En la versión 2.3 ciertas "
 "operaciones de enteros podían comportarse diferente después de lanzar la "
-"unificación del tipo de dato int-long entregando alertas FutureWarning y "
-"retornando valores limitados a 32 o 64 bits dependiendo de su plataforma. En "
-"la versión 2.4 estas expresiones ya no producen alertas y en vez de eso "
-"entrega un resultado diferente que suele ser un entero largo."
+"unificación del tipo de dato int-long entregando alertas :exc: "
+"`FutureWarning` y retornando valores limitados a 32 o 64 bits dependiendo de "
+"su plataforma. En la versión 2.4 estas expresiones ya no producen alertas y "
+"en vez de eso entrega un resultado diferente que suele ser un entero largo."
 
 #: ../Doc/whatsnew/2.4.rst:99
 msgid ""
@@ -272,7 +272,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:172
 msgid "PEP 292: Simpler String Substitutions"
-msgstr "PEP 292 Sustituciones simples de cadenas de caracteres"
+msgstr "PEP 292: Sustituciones simples de cadenas de caracteres"
 
 #: ../Doc/whatsnew/2.4.rst:174
 msgid ""
@@ -319,8 +319,8 @@ msgid ""
 "PEP 292 adds a :class:`Template` class to the :mod:`string` module that uses "
 "``$`` to indicate a substitution::"
 msgstr ""
-"PEP 292 agrega una clase `Template` al módulo `string` al módulo que usa ``"
-"$`` para indicar una sustitución::"
+"PEP 292 agrega una clase :class:`Template` al módulo :mod: `string` al "
+"módulo que usa ``$`` para indicar una sustitución::"
 
 #: ../Doc/whatsnew/2.4.rst:200
 msgid ""
@@ -328,9 +328,9 @@ msgid ""
 "raise a :exc:`KeyError`.  There's also a :meth:`safe_substitute` method that "
 "ignores missing keys::"
 msgstr ""
-"Si una llave se ha perdido desde el diccionario, el método `substitute` "
-"lanzará una :exc:`KeyError`. También el método `safe_substitute` que ignora "
-"las llaves faltantes::"
+"Si una llave falta en el diccionario, el método :meth: `substitute` lanzará "
+"una :exc:`KeyError`. También el método `safe_substitute` que ignora las "
+"llaves faltantes::"
 
 #: ../Doc/whatsnew/2.4.rst:211
 msgid ":pep:`292` - Simpler String Substitutions"
@@ -529,7 +529,7 @@ msgid ""
 "A new built-in function, ``reversed(seq)``, takes a sequence and returns an "
 "iterator that loops over the elements of the sequence  in reverse order.   ::"
 msgstr ""
-"Una nueva función de conjuntos integrados, ``reversed(seq)``toma una "
+"Una nueva función de conjuntos integrados, ``reversed(seq)`` toma una "
 "secuencia y retorna un iterador que recorre los elementos de la secuencia en "
 "orden inverso.:"
 
@@ -1207,9 +1207,9 @@ msgstr ""
 "El código para estas funciones proviene desde la librería GLib  (https://"
 "developer.gnome.org/glib/stable/) cuyos desarrolladores amablemente han "
 "residenciado las funciones relevantes y las han donado a la fundación de "
-"software Python. El módulo :mod:`locale`ahora puede cambiar la configuración "
-"local, dejando que las extensiones como GTK¿ produzcan los resultados "
-"correctos."
+"software Python. El módulo :mod:`locale` ahora puede cambiar la "
+"configuración local, dejando que las extensiones como GTK¿ produzcan los "
+"resultados correctos."
 
 #: ../Doc/whatsnew/2.4.rst:767
 msgid ":pep:`331` - Locale-Independent Float/String Conversions"
@@ -1400,7 +1400,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.4.rst:864
 msgid "the input may be any iterable;"
-msgstr "el dato de entrada puede ser algún interable;"
+msgstr "el dato de entrada puede ser algún iterable;"
 
 #: ../Doc/whatsnew/2.4.rst:866
 msgid "a newly formed copy is sorted, leaving the original intact; and"
@@ -1574,7 +1574,7 @@ msgid ""
 "number of strings together. (Contributed by Armin Rigo.)"
 msgstr ""
 "La concatenación de cadenas de texto en la declaración de ``s = s + \"abc"
-"\"`` and ``s += \"abc\"``ahora son ejecutadas de forma mas eficiente en "
+"\"`` and ``s += \"abc\"`` ahora son ejecutadas de forma mas eficiente en "
 "ciertas circunstancias. Esta optimizaciones no serán mostradas en otras "
 "implementaciones de Python tales como Python, entonces no se debe utilizar, "
 "es mejor seguir utilizando el método :meth:`join`de cadenas de caracteres si "
@@ -1621,7 +1621,7 @@ msgid ""
 "parameter that lets you perform a limited number of passes through the "
 "polling loop.  The default is still to loop forever."
 msgstr ""
-"El módulo :mod:`asyncore` y la función :func:`loop`ahora tiene un parámetro "
+"El módulo :mod:`asyncore` y la función :func:`loop` ahora tiene un parámetro "
 "*count* que permite ejecutar un limitado número de pases mediante el bucle. "
 "El valor predeterminado sigue siendo el bucle para siempre."
 
