--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 20:16+0200\n"
+"PO-Revision-Date: 2021-10-27 17:37+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/exceptions.rst:8
 msgid "Exception Handling"
@@ -192,7 +193,6 @@ msgstr ""
 "puntero ``NULL`` para usar en una declaración ``return``."
 
 #: ../Doc/c-api/exceptions.rst:100
-#, fuzzy
 msgid ""
 "This is the most common way to set the error indicator.  The first argument "
 "specifies the exception type; it is normally one of the standard exceptions, "
@@ -308,7 +308,6 @@ msgstr ""
 "función que toma dos nombres de archivo."
 
 #: ../Doc/c-api/exceptions.rst:184
-#, fuzzy
 msgid ""
 "Similar to :c:func:`PyErr_SetFromErrnoWithFilenameObject`, but the filename "
 "is given as a C string.  *filename* is decoded from the :term:`filesystem "
@@ -414,7 +413,6 @@ msgstr ""
 "excepciones piense que la excepción es :exc:`SyntaxError`."
 
 #: ../Doc/c-api/exceptions.rst:268
-#, fuzzy
 msgid ""
 "Like :c:func:`PyErr_SyntaxLocationObject`, but *filename* is a byte string "
 "decoded from the :term:`filesystem encoding and error handler`."
@@ -539,7 +537,6 @@ msgstr ""
 "``NULL`` para obtener el efecto predeterminado que se describe allí."
 
 #: ../Doc/c-api/exceptions.rst:344
-#, fuzzy
 msgid ""
 "Similar to :c:func:`PyErr_WarnExplicitObject` except that *message* and "
 "*module* are UTF-8 encoded strings, and *filename* is decoded from the :term:"
@@ -766,7 +763,7 @@ msgstr "Manejo de señal"
 
 #: ../Doc/c-api/exceptions.rst:508
 msgid "This function interacts with Python's signal handling."
-msgstr ""
+msgstr "Esta función interactúa con el manejo de señales de Python."
 
 #: ../Doc/c-api/exceptions.rst:510
 msgid ""
@@ -775,6 +772,11 @@ msgid ""
 "if so, invokes the corresponding signal handler.  If the :mod:`signal` "
 "module is supported, this can invoke a signal handler written in Python."
 msgstr ""
+"Si la función se llama desde el hilo principal y bajo el intérprete "
+"principal de Python, verifica si se ha enviado una señal a los procesos y, "
+"de ser así, invoca el manejador de señales correspondiente. Si el módulo :"
+"mod:`signal` es compatible, esto puede invocar un manejador de señales "
+"escrito en Python."
 
 #: ../Doc/c-api/exceptions.rst:515
 msgid ""
@@ -784,45 +786,61 @@ msgid ""
 "signals may not have been handled yet: they will be on the next :c:func:"
 "`PyErr_CheckSignals()` invocation)."
 msgstr ""
+"La función intenta manejar todas las señales pendientes y luego devuelve "
+"``0``. Sin embargo, si un manejador de señales de Python genera una "
+"excepción, el indicador de error se establece y la función devuelve ``-1`` "
+"inmediatamente (de modo que es posible que otras señales pendientes no se "
+"hayan manejado todavía: estarán en la siguiente invocación de :c:func:"
+"`PyErr_CheckSignals()`)."
 
 #: ../Doc/c-api/exceptions.rst:521
 msgid ""
 "If the function is called from a non-main thread, or under a non-main Python "
 "interpreter, it does nothing and returns ``0``."
 msgstr ""
+"Si la función se llama desde un hilo no principal, o bajo un intérprete de "
+"Python no principal, no hace nada y devuelve ``0``."
 
 #: ../Doc/c-api/exceptions.rst:524
 msgid ""
 "This function can be called by long-running C code that wants to be "
 "interruptible by user requests (such as by pressing Ctrl-C)."
 msgstr ""
+"Esta función se puede llamar mediante un código C de ejecución prolongada "
+"que quiere ser interrumpible por las peticiones del usuario (como presionar "
+"Ctrl-C)."
 
 #: ../Doc/c-api/exceptions.rst:528
 msgid ""
 "The default Python signal handler for :const:`SIGINT` raises the :exc:"
 "`KeyboardInterrupt` exception."
 msgstr ""
+"El controlador de señales de Python predeterminado para  :const:`SIGINT` "
+"genera la excepción :exc:`KeyboardInterrupt`."
 
 #: ../Doc/c-api/exceptions.rst:539
 msgid ""
 "Simulate the effect of a :const:`SIGINT` signal arriving. This is equivalent "
 "to ``PyErr_SetInterruptEx(SIGINT)``."
 msgstr ""
+"Simula el efecto de la llegada de una señal :const:`SIGINT`. Esto es "
+"equivalente a ``PyErr_SetInterruptEx(SIGINT)``."
 
 #: ../Doc/c-api/exceptions.rst:543 ../Doc/c-api/exceptions.rst:570
 msgid ""
 "This function is async-signal-safe.  It can be called without the :term:"
 "`GIL` and from a C signal handler."
 msgstr ""
+"Esta función es segura para señales asíncronas. Se puede llamar sin el :term:"
+"`GIL` y desde un manejador de señales de C."
 
 #: ../Doc/c-api/exceptions.rst:553
-#, fuzzy
 msgid ""
 "Simulate the effect of a signal arriving. The next time :c:func:"
 "`PyErr_CheckSignals` is called,  the Python signal handler for the given "
 "signal number will be called."
 msgstr ""
-"Simule el efecto de la llegada de una señal :const:`SIGINT`. La próxima vez "
+"Simula el efecto de la llegada de una señal :const:`SIGINT`. La próxima vez "
 "se llama :c:func:`PyErr_CheckSignals`, se llamará al manejador de señal de "
 "Python para :const:`SIGINT`."
 
@@ -833,9 +851,12 @@ msgid ""
 "interruption is requested (for example when the user presses Ctrl-C to "
 "interrupt an operation)."
 msgstr ""
+"Esta función puede ser llamada por código C que configura su propio manejo "
+"de señales y quiere que los manejadores de señales de Python sean invocados "
+"como se espera cuando se solicita una interrupción (por ejemplo, cuando el "
+"usuario presiona Ctrl-C para interrumpir una operación)."
 
 #: ../Doc/c-api/exceptions.rst:562
-#, fuzzy
 msgid ""
 "If the given signal isn't handled by Python (it was set to :data:`signal."
 "SIG_DFL` or :data:`signal.SIG_IGN`), it will be ignored."
@@ -849,6 +870,9 @@ msgid ""
 "returned.  Otherwise, ``0`` is returned.  The error indicator is never "
 "changed by this function."
 msgstr ""
+"Si *signum* está fuera del rango permitido de números de señal, se devuelve "
+"``-1``. De lo contrario, se devuelve ``0``. Esta función nunca cambia el "
+"indicador de error."
 
 #: ../Doc/c-api/exceptions.rst:578
 msgid ""
