Fixed an issue with wrapping

--- a/faq/programming.po
+++ b/faq/programming.po
@@ -2655,8 +2655,8 @@ msgid ""
 msgstr ""
 "La propiedad más importante de una prueba de identidad es que un objeto "
 "siempre es idéntico a si mismo, ``a is a`` siempre devuelve ``True``.  Las "
-"pruebas de identidad suelen ser más rápidas que pruebas de igualdad.  Y "
-"a diferencia de las pruebas de igualdad, las pruebas de identidad están "
+"pruebas de identidad suelen ser más rápidas que pruebas de igualdad.  Y a "
+"diferencia de las pruebas de igualdad, las pruebas de identidad están "
 "garantizadas de devolver un booleano ``True`` o ``False``."
 
 #: ../Doc/faq/programming.rst:1775
