Fix: update c-api/sys.po
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -308,7 +308,7 @@ msgid ""
 "<surrogateescape>`, surrogate characters in the range U+DC80..U+DCFF are "
 "converted to bytes 0x80..0xFF."
 msgstr ""
-"Codifica una cadena de caracteres amplios según el término :ref:`filesystem "
+"Codifica una cadena de caracteres amplios según el término :term:`filesystem "
 "encoding and error handler`. Si el gestor de errores es :ref:"
 "`surrogateescape error handler <surrogateescape>`, los caracteres "
 "sustituidos en el rango U+DC80..U+DCFF se convierten en bytes 0x80..0xFF."
