--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-10-27 11:05+0200\n"
+"PO-Revision-Date: 2021-10-28 10:29+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1577,9 +1577,9 @@ msgstr ""
 "\"`` and ``s += \"abc\"`` ahora son ejecutadas de forma mas eficiente en "
 "ciertas circunstancias. Esta optimizaciones no serán mostradas en otras "
 "implementaciones de Python tales como Python, entonces no se debe utilizar, "
-"es mejor seguir utilizando el método :meth:`join`de cadenas de caracteres si "
-"se quiere mantener la eficiencia de concatenar un largo número de cadenas de "
-"caracteres. (Contribución de Armin Rigo.)"
+"es mejor seguir utilizando el método :meth:`join` de cadenas de caracteres "
+"si se quiere mantener la eficiencia de concatenar un largo número de cadenas "
+"de caracteres. (Contribución de Armin Rigo.)"
 
 #: ../Doc/whatsnew/2.4.rst:974
 msgid ""
