Corregidos los problemas con pospell

--- a/faq/programming.po
+++ b/faq/programming.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-23 23:31+0200\n"
+"PO-Revision-Date: 2021-10-28 11:08+0200\n"
 "Last-Translator: Juan C. Tello <juanctello@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -107,7 +107,7 @@ msgid ""
 "debugger."
 msgstr ""
 "`trepan3k <https://github.com/rocky/python3-trepan/>`_ es un depurador "
-"similar a gdb."
+"similar a `gdb`."
 
 #: ../Doc/faq/programming.rst:43
 msgid ""
@@ -2342,7 +2342,7 @@ msgid ""
 "resolution order` (MRO) with ``type(self).__mro__``, and return the next in "
 "line after ``Derived`` in the MRO: ``Base``."
 msgstr ""
-"En el ejemplo, :func:`super` automaticamente determinará la instancia desde "
+"En el ejemplo, :func:`super` automáticamente determinará la instancia desde "
 "la cual ha sido llamada (el valor ``self```), busca el :term:`method "
 "resolution order` (MRO) con ``type(self).__mro__``, y devuelve el siguiente "
 "en línea después de ``Derived`` en el MRO: ``Base``."
@@ -2841,9 +2841,9 @@ msgid ""
 "It creates a reference to the instance unless special efforts are made to "
 "pass in weak references."
 msgstr ""
-"La función *lru_cache*funciona con métodos que tienen argumentos hashables.  "
-"Crea una referencia a la instancia a menos que esfuerzos especiales sean "
-"realizados para pasar en referencias débiles."
+"La función *lru_cache* funciona con métodos que tienen argumentos "
+"hashables.  Crea una referencia a la instancia a menos que esfuerzos "
+"especiales sean realizados para pasar en referencias débiles."
 
 #: ../Doc/faq/programming.rst:1920
 msgid ""
