--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -159,74 +159,64 @@ msgstr ""
 "`435`).</whatsnew-enum>"
 
 #: ../Doc/whatsnew/3.4.rst:106
-#, fuzzy
 msgid ""
 ":mod:`pathlib`: :ref:`Object-oriented filesystem paths <whatsnew-pathlib>` (:"
 "pep:`428`)."
 msgstr ""
 ":mod:`pathlib`: :ref:`Rutas del sistema de archivos orientadas a <whatsnew-"
-"pathlib>objetos` (:pep:`428`).</whatsnew-pathlib>"
+"pathlib>objetos` (:pep:`428`)."
 
 #: ../Doc/whatsnew/3.4.rst:108
-#, fuzzy
 msgid ""
 ":mod:`selectors`: :ref:`High-level and efficient I/O multiplexing <whatsnew-"
 "selectors>`, built upon the :mod:`select` module primitives (part of :pep:"
 "`3156`)."
 msgstr ""
 ":mod:`selectors`: :ref:`Multiplexación de E/S eficiente y de alto <whatsnew-"
-"selectors>nivel`, construida sobre las primitivas del módulo :mod:`select` "
-"(parte de :pep:`3156`).</whatsnew-selectors>"
+"selectors> nivel`, construida sobre las primitivas del módulo :mod:`select` "
+"(parte de :pep:`3156`)."
 
 #: ../Doc/whatsnew/3.4.rst:111
-#, fuzzy
 msgid ""
 ":mod:`statistics`: A basic :ref:`numerically stable statistics library "
 "<whatsnew-statistics>` (:pep:`450`)."
 msgstr ""
-":mod:`estadística`: Una biblioteca básica de estadísticas numéricamente "
-"estables <whatsnew-statistics>(:pep:`450`).</whatsnew-statistics>"
+":mod:`statistics`: Una básica :ref:`numerically stable statistics library "
+"<whatsnew-statistics>` (:pep:`450`)."
 
 #: ../Doc/whatsnew/3.4.rst:113
-#, fuzzy
 msgid ""
 ":mod:`tracemalloc`: :ref:`Trace Python memory allocations <whatsnew-"
 "tracemalloc>` (:pep:`454`)."
 msgstr ""
 ":mod:`tracemalloc`: :ref:`Trace Python memory <whatsnew-"
-"tracemalloc>allocations` (:pep:`454`).</whatsnew-tracemalloc>"
+"tracemalloc> allocations` (:pep:`454`)."
 
 #: ../Doc/whatsnew/3.4.rst:116
-#, fuzzy
 msgid "Significantly improved library modules:"
 msgstr "Mejora significativa de los módulos de la biblioteca:"
 
 #: ../Doc/whatsnew/3.4.rst:118
-#, fuzzy
 msgid ""
 ":ref:`Single-dispatch generic functions <whatsnew-singledispatch>` in :mod:"
 "`functools` (:pep:`443`)."
 msgstr ""
-":ref:`Funciones genéricas de despacho <whatsnew-singledispatch>único` en :"
-"mod:`functools` (:pep:`443`).</whatsnew-singledispatch>"
+":ref:`Funciones genéricas de despacho <whatsnew-singledispatch> único` en :"
+"mod:`functools` (:pep:`443`)."
 
 #: ../Doc/whatsnew/3.4.rst:120
-#, fuzzy
 msgid ""
 "New :mod:`pickle` :ref:`protocol 4 <whatsnew-protocol-4>` (:pep:`3154`)."
 msgstr ""
-"Nuevo :mod:`pickle` :ref:`protocolo <whatsnew-protocol-4>4` (:pep:`3154`).</"
-"whatsnew-protocol-4>"
+"Nuevo :mod:`pickle` :ref:`protocolo 4 <whatsnew-protocol-4>` (:pep:`3154`)."
 
 #: ../Doc/whatsnew/3.4.rst:121
-#, fuzzy
 msgid ""
 ":mod:`multiprocessing` now has :ref:`an option to avoid using os.fork on "
 "Unix <whatsnew-multiprocessing-no-fork>` (:issue:`8713`)."
 msgstr ""
 ":mod:`multiproceso` tiene ahora :ref:`una opción para evitar el uso de os."
-"fork en <whatsnew-multiprocessing-no-fork>Unix` (:issue:`8713`).</whatsnew-"
-"multiprocessing-no-fork>"
+"fork en <whatsnew-multiprocessing-no-fork>Unix` (:issue:`8713`)."
 
 #: ../Doc/whatsnew/3.4.rst:123
 #, fuzzy
@@ -268,7 +258,6 @@ msgid ""
 "`456`)."
 msgstr ""
 ":ref:`Algoritmo hash seguro e <whatsnew-pep-456>intercambiable` (:pep:`456`)."
-"</whatsnew-pep-456>"
 
 #: ../Doc/whatsnew/3.4.rst:136
 #, fuzzy
@@ -278,7 +267,7 @@ msgid ""
 msgstr ""
 ":ref:`Hacer no heredables los descriptores de archivo recién creados "
 "<whatsnew-pep-446>` (:pep:`446`) para evitar la filtración de descriptores "
-"de archivo a los procesos hijos.</whatsnew-pep-446>"
+"de archivo a los procesos hijos."
 
 #: ../Doc/whatsnew/3.4.rst:138
 #, fuzzy
@@ -287,7 +276,7 @@ msgid ""
 "issue:`16499`)."
 msgstr ""
 "Nueva opción de línea de comandos para :ref:`modo <whatsnew-isolated-"
-"mode>aislado`, (:issue:`16499`).</whatsnew-isolated-mode>"
+"mode>aislado`, (:issue:`16499`)."
 
 #: ../Doc/whatsnew/3.4.rst:140
 #, fuzzy
@@ -297,9 +286,8 @@ msgid ""
 "secure because they avoid sharing data with child processes."
 msgstr ""
 ":mod:`multiprocessing` tiene ahora :ref:`una opción para evitar el uso de os."
-"fork en <whatsnew-multiprocessing-no-fork>Unix`.  *spawn* y *forkserver* son "
-"más seguros porque evitan compartir datos con los procesos hijos.</whatsnew-"
-"multiprocessing-no-fork>"
+"fork en <whatsnew-multiprocessing-no-fork> Unix`.  *spawn* y *forkserver* son "
+"más seguros porque evitan compartir datos con los procesos hijos."
 
 #: ../Doc/whatsnew/3.4.rst:143
 #, fuzzy
@@ -321,11 +309,9 @@ msgstr ""
 "wiki/PBKDF2>`_."
 
 #: ../Doc/whatsnew/3.4.rst:148
-#, fuzzy
 msgid ":ref:`TLSv1.1 and TLSv1.2 support <whatsnew-tls-11-12>` for :mod:`ssl`."
 msgstr ""
-":ref:`Soporte de TLSv1.1 y TLSv1. <whatsnew-tls-11-12>2` para :mod:`ssl`.</"
-"whatsnew-tls-11-12>"
+":ref:`Soporte de TLSv1.1 y TLSv1.2 <whatsnew-tls-11-12>` para :mod:`ssl`."
 
 #: ../Doc/whatsnew/3.4.rst:149
 #, fuzzy
@@ -334,8 +320,7 @@ msgid ""
 "<whatsnew34-win-cert-store>` for :mod:`ssl`."
 msgstr ""
 ":ref:`Recuperación de certificados del soporte del almacén de certificados "
-"del sistema <whatsnew34-win-cert-store>Windows` para :mod:`ssl`.</whatsnew34-"
-"win-cert-store>"
+"del sistema <whatsnew34-win-cert-store> Windows` para :mod:`ssl`."
 
 #: ../Doc/whatsnew/3.4.rst:151
 #, fuzzy
@@ -344,7 +329,7 @@ msgid ""
 "for :mod:`ssl`."
 msgstr ""
 ":ref:`Soporte SNI (Server Name Indication) del lado del <whatsnew34-"
-"sni>servidor` para :mod:`ssl`.</whatsnew34-sni>"
+"sni> servidor` para :mod:`ssl`."
 
 #: ../Doc/whatsnew/3.4.rst:153
 #, fuzzy
@@ -353,7 +338,7 @@ msgid ""
 "<whatsnew34-sslcontext>`."
 msgstr ""
 "La clase :class:`ssl.SSLContext` tiene un :ref:`mucho que <whatsnew34-"
-"sslcontext>mejorar`.</whatsnew34-sslcontext>"
+"sslcontext>mejorar`."
 
 #: ../Doc/whatsnew/3.4.rst:155
 #, fuzzy
@@ -376,8 +361,7 @@ msgstr "Mejoras en la implementación de CPython:"
 #, fuzzy
 msgid ":ref:`Safe object finalization <whatsnew-pep-442>` (:pep:`442`)."
 msgstr ""
-":ref:`Finalización segura de <whatsnew-pep-442>objetos` (:pep:`442`).</"
-"whatsnew-pep-442>"
+":ref:`Finalización segura de <whatsnew-pep-442>objetos` (:pep:`442`)."
 
 #: ../Doc/whatsnew/3.4.rst:163
 #, fuzzy
@@ -387,21 +371,19 @@ msgid ""
 msgstr ""
 "Aprovechando :pep:`442`, en la mayoría de los casos :ref:`los globales de "
 "los módulos ya no se establecen como Ninguno durante la finalización "
-"<whatsnew-pep-442>` (:issue:`18214`).</whatsnew-pep-442>"
+"<whatsnew-pep-442>` (:issue:`18214`)."
 
 #: ../Doc/whatsnew/3.4.rst:165
 #, fuzzy
 msgid ":ref:`Configurable memory allocators <whatsnew-pep-445>` (:pep:`445`)."
 msgstr ""
-":ref:`Asignadores de memoria <whatsnew-pep-445>configurables` (:pep:`445`).</"
-"whatsnew-pep-445>"
+":ref:`Asignadores de memoria <whatsnew-pep-445>configurables` (:pep:`445`)."
 
 #: ../Doc/whatsnew/3.4.rst:166
 #, fuzzy
 msgid ":ref:`Argument Clinic <whatsnew-pep-436>` (:pep:`436`)."
 msgstr ""
-":ref:`Consultorio de <whatsnew-pep-436>argumentos` (:pep:`436`).</whatsnew-"
-"pep-436>"
+":ref:`Consultorio de <whatsnew-pep-436>argumentos` (:pep:`436`)."
 
 #: ../Doc/whatsnew/3.4.rst:168
 msgid ""
@@ -491,7 +473,7 @@ msgstr ""
 "python-on-unix>`, los comandos ``make install`` y ``make altinstall`` "
 "arrancan ``pip`` por defecto.  Este comportamiento puede ser controlado a "
 "través de las opciones de configuración, y anulado a través de las opciones "
-"del Makefile.</building-python-on-unix>"
+"del Makefile."
 
 #: ../Doc/whatsnew/3.4.rst:211
 #, fuzzy
@@ -703,7 +685,7 @@ msgstr ""
 "y :class:`bytearray`, las funciones de conveniencia de :mod:`codecs` "
 "soportan codificaciones arbitrarias tanto en Python 2 como en Python 3, en "
 "lugar de limitarse a codificaciones de texto Unicode (en Python 3) o a <-"
-">conversiones de ``basestring`` (en Python 2).</-> "
+">conversiones de ``basestring`` (en Python 2)."
 
 #: ../Doc/whatsnew/3.4.rst:307
 #, fuzzy
@@ -875,8 +857,7 @@ msgid ""
 "by Michael Bierenfeld and Andrew Kuchling in :issue:`1097797`.)"
 msgstr ""
 "Nuevo EBCDIC alemán :ref:`codec <standard-encodings>``cp273``.  "
-"(Contribución de Michael Bierenfeld y Andrew Kuchling en :issue:`1097797`)</"
-"standard-encodings>"
+"(Contribución de Michael Bierenfeld y Andrew Kuchling en :issue:`1097797`)"
 
 #: ../Doc/whatsnew/3.4.rst:429
 #, fuzzy
@@ -884,9 +865,8 @@ msgid ""
 "New Ukrainian :ref:`codec <standard-encodings>` ``cp1125``.  (Contributed by "
 "Serhiy Storchaka in :issue:`19668`.)"
 msgstr ""
-"Nuevo :ref:`codec <standard-encodings>``cp1125``</standard-encodings> "
-"ucraniano <standard-encodings>.  (Contribuido por Serhiy Storchaka en :issue:"
-"`19668`.)</standard-encodings>"
+"Nuevo Ucraniano :ref:`codec <standard-encodings>` ``cp1125`` "
+"(Contribuido por Serhiy Storchaka en :issue:`19668`.)"
 
 #: ../Doc/whatsnew/3.4.rst:432
 #, fuzzy
@@ -1459,7 +1439,7 @@ msgstr ""
 "También se ha actualizado la documentación de :mod:`contextlib` para incluir "
 "una :ref: <single-use-reusable-and-reentrant-cms>`discusión` de las "
 "diferencias entre gestores de contexto de un solo uso, reutilizables y "
-"reentrantes.</single-use-reusable-and-reentrant-cms>"
+"reentrantes."
 
 #: ../Doc/whatsnew/3.4.rst:704
 #, fuzzy
@@ -1600,7 +1580,7 @@ msgstr ""
 "Una nueva bandera :ref: <doctest-options>`option`, :data:`~doctest."
 "FAIL_FAST`, detiene la ejecución de la prueba tan pronto como se detecta el "
 "primer fallo.  (Contribuido por R. David Murray y Daniel Urban en :issue:"
-"`16522`.)</doctest-options>"
+"`16522`.)"
 
 #: ../Doc/whatsnew/3.4.rst:782
 #, fuzzy
@@ -1614,11 +1594,11 @@ msgid ""
 msgstr ""
 "La interfaz de línea de comandos de :mod:`doctest` utiliza ahora :mod:"
 "`argparse`, y tiene dos nuevas opciones, ``-`` y ``-f``.  ``-o`` permite "
-"<doctest-options>especificar</doctest-options> las opciones de :ref:"
+"<doctest-options> especificar las opciones de :ref:"
 "`doctest` <doctest-options>en la línea de órdenes, y ``-f`` es una "
 "abreviatura de ``- FAIL_FAST`` (en paralelo a la opción similar soportada "
 "por el CLI de :mod:`unittest`).  (Contribuido por R. David Murray en :issue:"
-"`11390`.)</doctest-options>"
+"`11390`.)"
 
 #: ../Doc/whatsnew/3.4.rst:788
 #, fuzzy
@@ -2015,8 +1995,7 @@ msgid ""
 msgstr ""
 "El :mod:`http.server` :ref:`interfaz de línea de <http-server-cli>comandos` "
 "tiene ahora una opción ``-b/--bind`` que hace que el servidor escuche en una "
-"dirección específica. (Contribuido por Malte Swart en :issue:`17764`.)</http-"
-"server-cli>"
+"dirección específica. (Contribuido por Malte Swart en :issue:`17764`.)"
 
 #: ../Doc/whatsnew/3.4.rst:971
 #, fuzzy
