Fixed asbtract typo

--- a/faq/programming.po
+++ b/faq/programming.po
@@ -2227,7 +2227,7 @@ msgid ""
 "To test for \"true inheritance\", scan the :term:`MRO` of the class:"
 msgstr ""
 "Note que :func:`isinstance` también verifica la herencia virtual de una :"
-"term:`asbtract base class`. Entonces, la prueba retorna `True` para una "
+"term:`abstract base class`. Entonces, la prueba retorna `True` para una "
 "clase registrada incluso si no ha heredado directa o indirectamente de ella. "
 "Para verificar \"herencia verdadera\", escanea el :term:`MRO` de la clase:"
 
