Traducido entrada con un `term`

--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-28 03:01-0500\n"
+"PO-Revision-Date: 2021-10-28 15:10-0500\n"
 "Last-Translator: José Luis Salgado Banda <josephLSalgado@outlook.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -150,9 +150,8 @@ msgid "Get the type of the Python object *o*."
 msgstr "Obtiene el tipo de objeto Python *o*."
 
 #: ../Doc/c-api/structures.rst:100
-#, fuzzy
 msgid "Return a :term:`borrowed reference`."
-msgstr "Retorna un :term:`borrowed reference`."
+msgstr "Retorna una referencia prestada (:term:`borrowed reference`)."
 
 #: ../Doc/c-api/structures.rst:102
 msgid "The :c:func:`Py_SET_TYPE` function must be used to set an object type."
