--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 01:55+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-10-28 15:10-0500\n"
+"Last-Translator: José Luis Salgado Banda <josephLSalgado@outlook.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/structures.rst:6
 msgid "Common Object Structures"
@@ -118,36 +119,45 @@ msgstr "Consulte la documentación de :c:type:`PyVarObject` anteriormente."
 msgid ""
 "Test if the *x* object is the *y* object, the same as ``x is y`` in Python."
 msgstr ""
+"Prueba si el objeto *x* es el objeto *y*, lo mismo que ``x is y`` en Python."
 
 #: ../Doc/c-api/structures.rst:74
 msgid ""
 "Test if an object is the ``None`` singleton, the same as ``x is None`` in "
 "Python."
 msgstr ""
+"Prueba si un objeto es la instancia única ``None``, lo mismo que ``x is "
+"None`` en Python."
 
 #: ../Doc/c-api/structures.rst:82
 msgid ""
 "Test if an object is the ``True`` singleton, the same as ``x is True`` in "
 "Python."
 msgstr ""
+"Prueba si un objeto es la instancia única ``True``, lo mismo que ``x is "
+"True`` en Python."
 
 #: ../Doc/c-api/structures.rst:90
 msgid ""
 "Test if an object is the ``False`` singleton, the same as ``x is False`` in "
 "Python."
 msgstr ""
+"Prueba si un objeto es la instancia única ``False``, lo mismo que ``x is "
+"False`` en Python."
 
 #: ../Doc/c-api/structures.rst:98
 msgid "Get the type of the Python object *o*."
-msgstr ""
+msgstr "Obtiene el tipo de objeto Python *o*."
 
 #: ../Doc/c-api/structures.rst:100
 msgid "Return a :term:`borrowed reference`."
-msgstr ""
+msgstr "Retorna una referencia prestada (:term:`borrowed reference`)."
 
 #: ../Doc/c-api/structures.rst:102
 msgid "The :c:func:`Py_SET_TYPE` function must be used to set an object type."
 msgstr ""
+"Debe utilizarse la función :c:func:`Py_SET_TYPE` para establecer un tipo de "
+"objeto."
 
 #: ../Doc/c-api/structures.rst:107
 msgid ""
@@ -163,13 +173,15 @@ msgstr "Establece el tipo del objeto *o* a *type*."
 
 #: ../Doc/c-api/structures.rst:122
 msgid "Get the reference count of the Python object *o*."
-msgstr ""
+msgstr "Obtiene la cuenta de referencias del objeto Python *o*."
 
 #: ../Doc/c-api/structures.rst:124
 msgid ""
 ":c:func:`Py_REFCNT()` is changed to the inline static function. Use :c:func:"
 "`Py_SET_REFCNT()` to set an object reference count."
 msgstr ""
+":c:func:`Py_REFCNT()` se cambia a la función estática en línea. Use :c:func:"
+"`Py_SET_REFCNT()` para establecer una cuenta de referencias de objetos."
 
 #: ../Doc/c-api/structures.rst:131
 msgid "Set the object *o* reference counter to *refcnt*."
@@ -177,11 +189,13 @@ msgstr "Establece el conteo de referencia del objeto *o* a *refcnt*."
 
 #: ../Doc/c-api/structures.rst:138
 msgid "Get the size of the Python object *o*."
-msgstr ""
+msgstr "Obtiene el tamaño del objeto Python *o*."
 
 #: ../Doc/c-api/structures.rst:140
 msgid "The :c:func:`Py_SET_SIZE` function must be used to set an object size."
 msgstr ""
+"Debe utilizarse la función :c:func:`Py_SET_SIZE` para establecer un tamaño "
+"de objeto."
 
 #: ../Doc/c-api/structures.rst:145
 msgid "Set the object *o* size to *size*."
@@ -414,7 +428,7 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:297
 msgid "``METH_FASTCALL`` is now part of the stable ABI."
-msgstr ""
+msgstr "Ahora ``METH_FASTCALL`` es parte de la ABI estable."
 
 #: ../Doc/c-api/structures.rst:302
 msgid ""
@@ -799,6 +813,9 @@ msgid ""
 "Get an attribute belonging to the object at address *obj_addr*.  The "
 "attribute is described by ``PyMemberDef`` *m*.  Returns ``NULL`` on error."
 msgstr ""
+"Obtiene un atributo que pertenece al objeto en la dirección *obj_addr*. El "
+"atributo se describe por ``PyMemberDef`` *m*. Retorna ``NULL`` en caso de "
+"error."
 
 #: ../Doc/c-api/structures.rst:482
 msgid ""
@@ -806,6 +823,9 @@ msgid ""
 "*o*. The attribute to set is described by ``PyMemberDef`` *m*.  Returns "
 "``0`` if successful and a negative value on failure."
 msgstr ""
+"Establece un atributo que pertenece al objeto en la dirección *obj_addr* al "
+"objeto *o*. El atributo a establecer se describe por ``PyMemberDef`` *m*. "
+"Retorna ``0`` si tiene éxito y un valor negativo si falla."
 
 #: ../Doc/c-api/structures.rst:489
 msgid ""
@@ -821,7 +841,7 @@ msgstr "nombre"
 
 #: ../Doc/c-api/structures.rst:495
 msgid "attribute name"
-msgstr "Nombre del atributo"
+msgstr "nombre del atributo"
 
 #: ../Doc/c-api/structures.rst:497
 msgid "get"
