Fix the messages marked as fuzzy in the c-api/exceptions.po file

--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -315,7 +315,7 @@ msgid ""
 msgstr ""
 "Similar a :c:func:`PyErr_SetFromErrnoWithFilenameObject`, pero el nombre del "
 "archivo se da como una cadena de caracteres de C. *filename* se decodifica a "
-"partir de la codificación del sistema de archivos (:func:`os.fsdecode`)."
+"partir de la codificación de :term:`filesystem encoding and error handler`."
 
 #: ../Doc/c-api/exceptions.rst:191
 msgid ""
@@ -418,8 +418,7 @@ msgid ""
 "decoded from the :term:`filesystem encoding and error handler`."
 msgstr ""
 "Como :c:func:`PyErr_SyntaxLocationObject`, pero *filename* es una cadena de "
-"bytes decodificada a partir de la codificación del sistema de archivos (:"
-"func:`os.fsdecode`)."
+"bytes decodificada a partir de :term:`filesystem encoding and error handler`."
 
 #: ../Doc/c-api/exceptions.rst:276
 msgid ""
@@ -543,8 +542,8 @@ msgid ""
 "`filesystem encoding and error handler`."
 msgstr ""
 "Similar a :c:func:`PyErr_WarnExplicitObject` excepto que *message* y "
-"*module* son cadenas codificadas UTF-8, y *filename* se decodifica de la "
-"codificación del sistema de archivos (:func:`os.fsdecode`)."
+"*module* son cadenas codificadas UTF-8, y *filename* se decodifica de :term:"
+"`filesystem encoding and error handler`."
 
 #: ../Doc/c-api/exceptions.rst:351
 msgid ""
@@ -840,9 +839,9 @@ msgid ""
 "`PyErr_CheckSignals` is called,  the Python signal handler for the given "
 "signal number will be called."
 msgstr ""
-"Simula el efecto de la llegada de una señal :const:`SIGINT`. La próxima vez "
-"se llama :c:func:`PyErr_CheckSignals`, se llamará al manejador de señal de "
-"Python para :const:`SIGINT`."
+"Simula el efecto de la llegada de una señal. La próxima vez que sea llamado :"
+"c:func:`PyErr_CheckSignals`, se llamará al manejador de señal de Python para "
+"el número de señal dado."
 
 #: ../Doc/c-api/exceptions.rst:557
 msgid ""
@@ -861,8 +860,8 @@ msgid ""
 "If the given signal isn't handled by Python (it was set to :data:`signal."
 "SIG_DFL` or :data:`signal.SIG_IGN`), it will be ignored."
 msgstr ""
-"Si :const:`SIGINT` no es manejado por Python (se configuró en :data:`signal."
-"SIG_DFL` o :data:`signal.SIG_IGN`), esta función no hace nada."
+"Si la señal dada no es manejada por Python (se configuró en :data:`signal."
+"SIG_DFL` o :data:`signal.SIG_IGN`), se ignorará."
 
 #: ../Doc/c-api/exceptions.rst:565
 msgid ""
