Traducido archivo c-api/import

--- a/c-api/import.po
+++ b/c-api/import.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-21 20:13+0200\n"
+"PO-Revision-Date: 2021-10-28 21:28-0500\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/import.rst:6
 msgid "Importing Modules"
@@ -447,7 +448,6 @@ msgstr ""
 "adicionales. La estructura se define en :file:`Include/import.h` como::"
 
 #: ../Doc/c-api/import.rst:297
-#, fuzzy
 msgid ""
 "Add a collection of modules to the table of built-in modules.  The *newtab* "
 "array must end with a sentinel entry which contains ``NULL`` for the :attr:"
@@ -462,8 +462,8 @@ msgstr ""
 "el campo :attr:`name`; Si no se proporciona el valor centinela, se puede "
 "producir un error de memoria. Retorna ``0`` en caso de éxito o ``-1`` si se "
 "puede asignar memoria insuficiente para ampliar la tabla interna. En caso de "
-"error, no se agregan módulos a la tabla interna. Esto debería llamarse antes "
-"de :c:func:`Py_Initialize`."
+"error, no se agregan módulos a la tabla interna. Esta función debe ser "
+"llamada antes de :c:func:`Py_Initialize`."
 
 #: ../Doc/c-api/import.rst:304
 msgid ""
@@ -471,6 +471,9 @@ msgid ""
 "or :c:func:`PyImport_ExtendInittab` must be called before each Python "
 "initialization."
 msgstr ""
+"Si Python es inicializado múltiples veces, se debe llamar :c:func:"
+"`PyImport_AppendInittab` o :c:func:`PyImport_ExtendInittab` antes de cada "
+"inicialización de Python."
 
 #~ msgid "Initialize the import mechanism.  For internal use only."
 #~ msgstr "Inicializa el mecanismo de importación. Sólo para uso interno."
