--- a/howto/descriptor.po
+++ b/howto/descriptor.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-09-06 00:30+0800\n"
+"PO-Revision-Date: 2021-10-30 00:13+0800\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/descriptor.rst:5
 msgid "Descriptor HowTo Guide"
@@ -114,13 +115,12 @@ msgid "Simple example: A descriptor that returns a constant"
 msgstr "Ejemplo simple: un descriptor que retorna una constante"
 
 #: ../Doc/howto/descriptor.rst:45
-#, fuzzy
 msgid ""
 "The :class:`Ten` class is a descriptor whose :meth:`__get__` method always "
 "returns the constant ``10``:"
 msgstr ""
-"La clase :class:`Ten` es un descriptor que siempre retorna el valor "
-"constante ``10`` desde su método :meth:`__get__`:"
+"La clase :class:`Ten` es un descriptor cuyo método :meth:`__get__` siempre "
+"retorna la constante ``10``:"
 
 #: ../Doc/howto/descriptor.rst:54
 msgid ""
@@ -139,17 +139,16 @@ msgstr ""
 "atributo normal y la búsqueda a través del descriptor:"
 
 #: ../Doc/howto/descriptor.rst:73
-#, fuzzy
 msgid ""
 "In the ``a.x`` attribute lookup, the dot operator finds ``'x': 5`` in the "
 "class dictionary.  In the ``a.y`` lookup, the dot operator finds a "
 "descriptor instance, recognized by its ``__get__`` method. Calling that "
 "method returns ``10``."
 msgstr ""
-"En la búsqueda de atributo ``a.x``, el operador punto busca la llave ``x`` y "
-"el valor ``5`` en el diccionario de la clase. En la búsqueda ``a.y``, el "
-"operador punto encuentra una instancia de un descriptor, reconocible por su "
-"método ``__get__``, e invoca este método, el cual retorna ``10``."
+"En la búsqueda de atributo ``a.x``, el operador punto encuentra ``'x': 5`` "
+"en el diccionario de la clase. En la búsqueda ``a.y``, el operador punto "
+"encuentra una instancia de un descriptor, reconocible por su método "
+"``__get__``. Llamar a ese método retorna ``10``."
 
 #: ../Doc/howto/descriptor.rst:78
 msgid ""
@@ -298,9 +297,8 @@ msgid "The new class now logs access to both *name* and *age*:"
 msgstr "La nueva clase ahora registrar accesos tanto a *name* como a *age*:"
 
 #: ../Doc/howto/descriptor.rst:284
-#, fuzzy
 msgid "The two *Person* instances contain only the private names:"
-msgstr "Las dos instancias de *Person* contienen sólo dos nombres privados::"
+msgstr "Las dos instancias de *Person* contienen sólo los nombres privados::"
 
 #: ../Doc/howto/descriptor.rst:295
 msgid "Closing thoughts"
@@ -328,16 +326,15 @@ msgstr ""
 "es un descriptor.)"
 
 #: ../Doc/howto/descriptor.rst:305
-#, fuzzy
 msgid ""
 "Descriptors get invoked by the dot operator during attribute lookup.  If a "
 "descriptor is accessed indirectly with ``vars(some_class)"
 "[descriptor_name]``, the descriptor instance is returned without invoking it."
 msgstr ""
-"Los descriptores son invocados por el \"operator\" punto durante la búsqueda "
-"de atributos. Si un descriptor es accedido indirectamente con "
-"``vars(una_clase)[nombre_del_descriptor]``, la instancia del descriptor es "
-"retornada sin ser invocada."
+"Los descriptores son invocados por el operador punto durante la búsqueda de "
+"atributos. Si un descriptor es accedido indirectamente con ``vars(una_clase)"
+"[nombre_del_descriptor]``, la instancia del descriptor es retornada sin ser "
+"invocada."
 
 #: ../Doc/howto/descriptor.rst:309
 msgid ""
@@ -894,7 +891,6 @@ msgid "ORM example"
 msgstr "Ejemplo de mapeos objeto-relacional (*ORM*)"
 
 #: ../Doc/howto/descriptor.rst:832
-#, python-format
 msgid ""
 "The following code is simplified skeleton showing how data descriptors could "
 "be used to implement an `object relational mapping <https://en.wikipedia.org/"
@@ -1121,9 +1117,8 @@ msgstr ""
 "de dónde viene *cls* en métodos de clase, ¡es acá!"
 
 #: ../Doc/howto/descriptor.rst:1191
-#, fuzzy
 msgid "Kinds of methods"
-msgstr "Otros tipos de métodos"
+msgstr "Tipos de métodos"
 
 #: ../Doc/howto/descriptor.rst:1193
 msgid ""
@@ -1295,7 +1290,6 @@ msgstr ""
 "Python de :func:`classmethod` se vería así:"
 
 #: ../Doc/howto/descriptor.rst:1381
-#, fuzzy
 msgid ""
 "The code path for ``hasattr(type(self.f), '__get__')`` was added in Python "
 "3.9 and makes it possible for :func:`classmethod` to support chained "
@@ -1304,7 +1298,7 @@ msgid ""
 msgstr ""
 "La ruta de código para ``hasattr(obj, '__get__')`` fue añadida en Python "
 "3.9, y hace posible que :func:`classmethod` soporte decoradores encadenados."
-"Por ejemplo, classmethod y property se pueden encadenar:"
+"Por ejemplo, un classmethod y un property se puede encadenar:"
 
 #: ../Doc/howto/descriptor.rst:1401
 msgid "Member objects and __slots__"
@@ -1351,19 +1345,19 @@ msgstr ""
 "cantidad de instancias será creada."
 
 #: ../Doc/howto/descriptor.rst:1463
-#, python-format
 msgid ""
 "4. Improves speed.  Reading instance variables is 35% faster with "
 "``__slots__`` (as measured with Python 3.10 on an Apple M1 processor)."
 msgstr ""
+"4. Mejora la velocidad. Leer variables de instancia es 35% más rápido con "
+"``__slots__`` (medido con Python 3.10 en un procesador Apple M1)."
 
 #: ../Doc/howto/descriptor.rst:1466
-#, fuzzy
 msgid ""
 "5. Blocks tools like :func:`functools.cached_property` which require an "
 "instance dictionary to function correctly:"
 msgstr ""
-"4. Bloquea a herramientas tales como :func:`functools.cached_property`, las "
+"5. Bloquea a herramientas tales como :func:`functools.cached_property`, las "
 "que requieren un diccionario de instancia para funcionar correctamente:"
 
 #: ../Doc/howto/descriptor.rst:1488
