Add translate missing

--- a/c-api/dict.po
+++ b/c-api/dict.po
@@ -162,6 +162,8 @@ msgid ""
 "Calling this API without :term:`GIL` held had been allowed for historical "
 "reason. It is no longer allowed."
 msgstr ""
+"Llamando a esta API sin :term:`GIL` había sido permitido por motivos históricos."
+"Ya no está permitido."
 
 #: ../Doc/c-api/dict.rst:112
 msgid ""
