Traducida última línea y otros cambios menores

--- a/c-api/object.po
+++ b/c-api/object.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-16 13:01+0200\n"
+"PO-Revision-Date: 2021-10-29 14:59-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 2.3\n"
 
 #: ../Doc/c-api/object.rst:6
 msgid "Object Protocol"
@@ -447,13 +448,13 @@ msgstr ""
 "excepto cuando se necesita el recuento de referencias incrementado."
 
 #: ../Doc/c-api/object.rst:300
-#, fuzzy
 msgid ""
 "Return non-zero if the object *o* is of type *type* or a subtype of *type*, "
 "and ``0`` otherwise.  Both parameters must be non-``NULL``."
 msgstr ""
-"Retorna verdadero si el objeto *o* es de tipo *type* o un subtipo de *type*. "
-"Ambos parámetros no deben ser ``NULL``."
+"Retorna un valor no-nulo si el objeto *o* es de tipo *type* o un subtipo de "
+"*type*, y ``0`` en cualquier otro caso. Ninguno de los dos parámetros debe "
+"ser ``NULL``."
 
 #: ../Doc/c-api/object.rst:309
 msgid ""
@@ -468,7 +469,6 @@ msgstr ""
 "Python ``len(o)``."
 
 #: ../Doc/c-api/object.rst:316
-#, fuzzy
 msgid ""
 "Return an estimated length for the object *o*. First try to return its "
 "actual length, then an estimate using :meth:`~object.__length_hint__`, and "
@@ -546,6 +546,11 @@ msgid ""
 "`AsyncIterator`, this returns itself. Raises :exc:`TypeError` and returns "
 "``NULL`` if the object cannot be iterated."
 msgstr ""
+"Esto es equivalente a la expresión de Python ``aiter(o)``. Toma un objeto :"
+"class:`AsyncIterable` y retorna :class:`AsyncIterator`. Este es típicamente "
+"un nuevo iterador, pero si el argumento es :class:`AsyncIterator`, se "
+"retornará a sí mismo. Lanza :exc:`TypeError` y retorna ``NULL`` si el objeto "
+"no puede ser iterado."
 
 #~ msgid ""
 #~ "Determine if the object *o* is callable.  Return ``1`` if the object is "
