Actualizado el código en una de las preguntas

--- a/c-api/object.po
+++ b/c-api/object.po
@@ -480,7 +480,7 @@ msgstr ""
 "su longitud real, luego una estimación usando :meth:`~object."
 "__length_hint__`, y finalmente retorna el valor predeterminado. En caso de "
 "error, retorna ``-1``. Este es el equivalente a la expresión de Python "
-"``operator.length_hint (o, default)``."
+"``operator.length_hint(o, defaultvalue)``."
 
 #: ../Doc/c-api/object.rst:326
 msgid ""
