Add translate missing

--- a/c-api/long.po
+++ b/c-api/long.po
@@ -214,6 +214,7 @@ msgstr "Use :meth:`__index__` si está disponible."
 #: ../Doc/c-api/long.rst:277 ../Doc/c-api/long.rst:297
 msgid "This function will no longer use :meth:`__int__`."
 msgstr ""
+"Esta función no usará más :meth:`__int__`."
 
 #: ../Doc/c-api/long.rst:140
 msgid ""
