Perform some improvements in translations

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,11 +11,11 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-30 22:00-0400\n"
-"Last-Translator: Yohanna Padrino <yohanazareth2693@gmail.com>\n"
+"PO-Revision-Date: 2021-10-29 22:00-0500\n"
+"Last-Translator: Pedro Aarón <p.luis.aaron@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=UTF-8\n" 
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
 "X-Generator: Poedit 2.4.2\n"
@@ -41,7 +41,7 @@ msgstr ":pep:`398` - Calendario de Publicación Python 3.3"
 
 #: ../Doc/whatsnew/3.3.rst:55
 msgid "Summary -- Release highlights"
-msgstr "Resumen -- aspectos destacados de la versión"
+msgstr "Resumen -- Aspectos destacados de la versión"
 
 #: ../Doc/whatsnew/3.3.rst:60
 msgid "New syntax features:"
@@ -100,7 +100,7 @@ msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.3.rst:76
 msgid "Reworked :ref:`I/O exception hierarchy <pep-3151>`."
-msgstr "Se re elabora :ref:`Jerarquía de excepción I/O <pep-3151>` ."
+msgstr "Se reformula la :ref:`Jerarquía de excepción I/O <pep-3151>` ."
 
 #: ../Doc/whatsnew/3.3.rst:78
 msgid "Implementation improvements:"
